tests/NormalTests/paczka1/fuzzy1/74273377.err
Error in line 14: D4jbk S802 25,16
Error in line 40: D4jbk A873 73,90
